# Cascavel

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .wranglerignore  404.html  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  PLUGINS.md  README  README.md  README.pt-BR.md  ROADMAP.md  SECURITY.md  SUPPORT.md  _headers  _redirects  ai_remediation.py  apply_plugins_html.py  build_plugins_section.py  cascavel.py  generate_plugins_html.py  index.html  install.sh  mitre_exporter.py  npm_wrapper.js  ocsf_exporter.py  package.json  plugins_en.html  plugins_pt.html  (+11 more)
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml  stale.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge.yml  ci.yml  codeql.yml  docker-publish.yml  fuzz.yml  pages.yml  release-omni.yml  release.yml  scorecard.yml  security.yml  stale.yml  update-deps.yml
.well-known/: security.txt
assets/js/: frame-buster.js  plugin-search.js  ui.en.js  ui.js
cascavel/: __init__.py  __main__.py  constants.py  engine.py  preflight.py  reporters.py  security.py  tools.py  ui.py  updater.py  validators.py
docs/: ARCHITECTURE.md  DEVELOPER.md  DTO.md  PLUGIN_GUIDE.md
en/: index.html
plugins/: __init__.py  ad_detection.py  admin_finder.py  adversary_simulation.py  airflow_jwt_config_cve.py  api_enum.py  api_fuzzing.py  api_versioning.py  auto_exploit.py  aws_keyhunter.py  blind_rce.py  blockchain_audit.py  bluetooth_audit.py  broker_ssrf_relay.py  cicd_exposure.py  clickjacking_check.py  cloud_enum.py  cloud_exploitation.py  cloud_ghosting.py  cloud_metadata.py  cobalt_strike_c2.py  coerced_auth_web.py  container_escape.py  cors_checker.py  crlf_scanner.py  csp_bypass.py  csrf_detector.py  cve_2021_44228_scanner.py  deserialization_scan.py  dir_bruteforce.py  dns_deep.py  dns_rebinding.py  dns_recon_deep.py  docker_exposure.py  domain_transf.py  elastic_exposure.py  email_harvester.py  email_spoof_check.py  fast_webshell.py  firmware_analysis.py  (+99 more)
profiles/: api.yaml  cloud.yaml  full.yaml  network.yaml  web.yaml
scripts/: apply-tak8-hardening.py  assert-no-git-published.sh  update_deps.py
tests/: conftest.py  fuzz_sanitizer.py  test_core.py  test_ctem_edge_cases.py  test_engine_resilience.py  test_lethal_plugins.py  test_new_plugins.py  test_plugin_schema.py  test_report_generator.py  test_sarif_exporter.py  test_silent_failures.py
wordlists/: common.txt
