[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascavel"
version = "2.1.0"
description = "Quantum Security Framework — Pentest automation with 84 plugins, Red Team 2026 intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "DevFerreiraG", email = "devferreirag@proton.me"},
]
keywords = ["pentest", "security", "osint", "framework", "plugins", "red-team", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "requests",
    "rich",
    "pyfiglet",
]

[project.optional-dependencies]
full = [
    "beautifulsoup4",
    "dnspython",
    "python-nmap",
    "pyOpenSSL",
    "paramiko",
    "pyjwt",
    "boto3",
    "shodan",
    "censys",
    "notify-py",
]

[project.urls]
Homepage = "https://github.com/glferreira-devsecops/Cascavel"
Repository = "https://github.com/glferreira-devsecops/Cascavel"
Issues = "https://github.com/glferreira-devsecops/Cascavel/issues"
Changelog = "https://github.com/glferreira-devsecops/Cascavel/blob/main/CHANGELOG.md"

[project.scripts]
cascavel = "cascavel:main"

[tool.setuptools]
py-modules = ["cascavel"]
