[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascavel"
version = "2.1.0"
description = "Quantum Security Framework by RET Tecnologia — Pentest automation with 85+ plugins, Red Team 2026 intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Gabriel Ferreira (DevFerreiraG)", email = "devferreirag@proton.me"},
]
maintainers = [
    {name = "RET Tecnologia", email = "devferreirag@proton.me"},
]
keywords = [
    "pentest",
    "security",
    "osint",
    "framework",
    "plugins",
    "red-team",
    "vulnerability-scanner",
    "reconnaissance",
    "offensive-security",
    "bug-bounty",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.32.5",
    "rich>=13.7.0",
    "pyfiglet>=1.0.2",
]

[project.optional-dependencies]
full = [
    "beautifulsoup4>=4.12.0",
    "dnspython>=2.6.0",
    "python-nmap>=0.7.1",
    "pyOpenSSL>=24.0.0",
    "paramiko>=3.4.0",
    "pyjwt>=2.8.0",
    "boto3>=1.34.0",
    "shodan>=1.31.0",
    "censys>=2.2.0",
    "notify-py>=0.3.42",
]
dev = [
    "bandit>=1.7.7",
    "semgrep>=1.60.0",
    "pip-audit>=2.7.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://rettecnologia.org"
Documentation = "https://github.com/glferreira-devsecops/Cascavel/blob/main/PLUGINS.md"
Repository = "https://github.com/glferreira-devsecops/Cascavel"
Issues = "https://github.com/glferreira-devsecops/Cascavel/issues"
Changelog = "https://github.com/glferreira-devsecops/Cascavel/blob/main/CHANGELOG.md"
"Security Policy" = "https://github.com/glferreira-devsecops/Cascavel/blob/main/SECURITY.md"
"RET Tecnologia" = "https://rettecnologia.org"

[project.scripts]
cascavel = "cascavel:main"

[tool.setuptools]
py-modules = ["cascavel"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "S", "B", "UP"]
ignore = [
    # ── Security Tool Design Patterns (NOT suppression) ──
    # Cascavel is an offensive security framework. These patterns
    # are INTENTIONAL architectural decisions for pentest tools:
    "S101",   # assert — used for internal invariants
    "S104",   # bind to 0.0.0.0 — testing server exposure
    "S110",   # try-except-pass — graceful recon failure (85 plugins)
    "S112",   # try-except-continue — resilient enumeration loops
    "S310",   # urllib.urlopen — URL probing during recon
    "S311",   # random — non-crypto randomization for payloads
    "S314",   # xml.etree — XXE testing requires raw XML parsing
    "S321",   # ftplib — FTP brute force plugin
    "S501",   # verify=False — TLS cert bypass for security testing
    "S602",   # shell=True — piped tool chains (echo target | tool)
    "S603",   # subprocess call — external tool orchestration
    "S607",   # partial path — system tool invocation (nmap, etc.)
    # ── Python Patterns ──
    "E402",   # module-level import not at top — after sys.path/version checks
]

[tool.bandit]
exclude_dirs = ["wordlists", "nuclei-templates", "docs", "en"]
skips = [
    # ── Offensive Security Tool Design Patterns ──
    # These are INTENTIONAL for a pentest framework, not suppression.
    # Each skip mirrors the ruff ignores above with Bandit equivalents.
    "B101",   # assert_used — internal invariants in plugin loader
    "B104",   # hardcoded_bind_all_interfaces — checks if target binds 0.0.0.0
    "B110",   # try_except_pass — graceful recon failure (85 plugins)
    "B112",   # try_except_continue — resilient enumeration loops
    "B113",   # request_without_timeout — some probes need long waits
    "B301",   # pickle — deserialization scan plugin
    "B310",   # urllib_urlopen — URL probing during recon
    "B311",   # random — non-crypto randomization for payloads/jitter
    "B314",   # xml_bad_etree — XXE testing requires raw XML parsing
    "B320",   # xml_bad_sax — XXE/SAML scanner plugin
    "B321",   # ftplib — FTP brute force plugin
    "B402",   # import_ftplib — FTP brute force plugin needs ftplib
    "B501",   # request_with_no_cert_validation — TLS bypass for testing
    "B507",   # ssh_no_host_key_verification — SSH brute force plugin
    "B601",   # paramiko_calls — SSH brute force plugin
    "B602",   # subprocess_popen_with_shell_equals_true — piped tool chains
    "B603",   # subprocess_without_shell_equals_true — tool orchestration
    "B604",   # any_other_function_with_shell_equals_true — shell pipelines
    "B607",   # start_process_with_partial_path — system tool invocation
    "B608",   # hardcoded_sql_expressions — SQLi payload generation
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
